[gd_scene load_steps=30 format=3 uid="uid://di3eirwna2f8r"]

[ext_resource type="Script" uid="uid://chcg44c1u4ky1" path="res://scenes/characters/Enemies/Bullet/Cannon/Cannon.gd" id="1_ria0b"]
[ext_resource type="PackedScene" uid="uid://dkfqtofx032h6" path="res://scenes/characters/Enemies/Bullet/Bill/bill.tscn" id="2_crnq1"]
[ext_resource type="Texture2D" uid="uid://bk1euy27e5u64" path="res://scenes/characters/Enemies/Bullet/Cannon/Bullet cannon.png" id="2_pu81y"]
[ext_resource type="Texture2D" uid="uid://cqq86k0ct28on" path="res://scenes/characters/Enemies/Bullet/Cannon/Bullet cannon2.png" id="3_jnycu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_18ahh"]
atlas = ExtResource("2_pu81y")
region = Rect2(560, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_xveil"]
atlas = ExtResource("2_pu81y")
region = Rect2(0, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gusx"]
atlas = ExtResource("2_pu81y")
region = Rect2(56, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5fdc"]
atlas = ExtResource("2_pu81y")
region = Rect2(112, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk1xb"]
atlas = ExtResource("2_pu81y")
region = Rect2(168, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5g0u"]
atlas = ExtResource("2_pu81y")
region = Rect2(224, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt4s8"]
atlas = ExtResource("2_pu81y")
region = Rect2(280, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ecyj"]
atlas = ExtResource("2_pu81y")
region = Rect2(336, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6io1"]
atlas = ExtResource("2_pu81y")
region = Rect2(392, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn15u"]
atlas = ExtResource("2_pu81y")
region = Rect2(448, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_esbpn"]
atlas = ExtResource("2_pu81y")
region = Rect2(504, 0, 56, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_pcuu2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18ahh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xveil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gusx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5fdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk1xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5g0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt4s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ecyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6io1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn15u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esbpn")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kya0q"]
atlas = ExtResource("3_jnycu")
region = Rect2(0, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_25g6m"]
atlas = ExtResource("3_jnycu")
region = Rect2(0, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvx3i"]
atlas = ExtResource("3_jnycu")
region = Rect2(56, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7pd6"]
atlas = ExtResource("3_jnycu")
region = Rect2(112, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvnp"]
atlas = ExtResource("3_jnycu")
region = Rect2(168, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3ooy"]
atlas = ExtResource("3_jnycu")
region = Rect2(224, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkuna"]
atlas = ExtResource("3_jnycu")
region = Rect2(280, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfcx3"]
atlas = ExtResource("3_jnycu")
region = Rect2(336, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_65ucj"]
atlas = ExtResource("3_jnycu")
region = Rect2(392, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb1yd"]
atlas = ExtResource("3_jnycu")
region = Rect2(448, 0, 56, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qe5x"]
atlas = ExtResource("3_jnycu")
region = Rect2(504, 0, 56, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_ic2nl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kya0q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25g6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvx3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7pd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3ooy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkuna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfcx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65ucj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb1yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qe5x")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="Curve2D" id="Curve2D_3p5ow"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -8, -1)
}
point_count = 1

[node name="Cannon" type="RigidBody2D"]
light_mask = 2
visibility_layer = 2
collision_layer = 15
collision_mask = 15
mass = 999.0
gravity_scale = 0.0
lock_rotation = true
freeze = true
freeze_mode = 1
script = ExtResource("1_ria0b")
bullet = ExtResource("2_crnq1")

[node name="Objects" type="Node2D" parent="."]

[node name="cannon" type="AnimatedSprite2D" parent="."]
z_as_relative = false
position = Vector2(0, -0.666664)
sprite_frames = SubResource("SpriteFrames_pcuu2")
animation = &"shoot"
frame = 9
frame_progress = 1.0

[node name="cannon_mouth" type="AnimatedSprite2D" parent="cannon"]
z_index = -2
position = Vector2(0, -0.333336)
sprite_frames = SubResource("SpriteFrames_ic2nl")
animation = &"shoot"
frame = 9
frame_progress = 1.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_3p5ow")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1, -2.167)
rotation = 1.5708

[node name="Timer" type="Timer" parent="."]
wait_time = 5.425
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-9, 17, 7, 17, 7, 5, 13, 5, 13, -11, 6, -11, 5, -9, -9, -9, -11, -11, -15, -11, -13, -8, -13, 1, -16, 5, -9, 5)

[connection signal="animation_finished" from="cannon" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
